@@ -1,3 +1,7 @@
+2002-03-04  Werner Koch  <wk@gnupg.org>
+
+	* configure.ac: Bumbed version to 0.2.1
+
 2002-02-07  Werner Koch  <wk@gnupg.org>
 
 	* configure.ac: Bumped version to 0.2.0
